# teacup

./: .gitignore  LICENSE  README.md  TODO.txt  examples.py  pyproject.toml
examples/: bouncing balls.py  rainbow.py  rectangles.py
teacup/: LICENSE  README.md  __init__.py
teacup/assets/: __init__.py
teacup/engine/: __init__.py  _window_process.py  core.py  draw.py  font.py  style.py  window.py
