[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "teacup"
version = "0.1.0"
description = "Teacup package based on pygame."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["teacup*"]

[tool.setuptools.package-data]
"teacup.assets" = ["*.png", "*.jpg", "*.json", "*"]
